内容の変更

--- a/sample.html
+++ b/sample.html
@@ -104,7 +104,7 @@
 <!-- =====================　メイン　===================== -->
 <div id="main">
   <h1>新着情報</h1>
-  ※ここにページの内容を記述
+  なぎさ牛乳
 </div>
 
 <!-- ====================　フッター　==================== -->
